<resources>
    <string name="app_name">eCommerce</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_navigation_home">NavigationHomeActivity</string>
    <string name="total_price">Total Price =</string>
    <string name="congratulations_your_order_has_been_placed_successfully">Congratulations!,Your order has been placed successfully</string>
    <string name="next">Next</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="join_now">Join Now</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="product_name">Product Name</string>
    <string name="product_description_here">Product Description Here</string>
    <string name="product_price_here">Product price Here</string>
    <string name="add_product">Add Product</string>
    <string name="phone">Phone Number</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="i_m_an_admin">I\'m an Admin?</string>
    <string name="i_am_not_an_admin">I am not an Admin</string>
    <string name="add_new_product">Add new product</string>
    <string name="logout">Logout</string>
    <string name="check_new_orders">Check new orders</string>
</resources>