<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        android:id="@+id/card">
    <ImageView
        android:id="@+id/login_applogo"
        android:layout_width="match_parent"
        android:layout_height="318dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/app_name"
        android:src="@drawable/walmart_logo" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/login_phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:autofillHints="phone"
        android:background="@drawable/input_design"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="20dp"
        android:textColor="@color/purple_700"
        android:textColorHint="@color/purple_700"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_password_input"
        android:layout_below="@id/login_phone_number_input"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:autofillHints="password"
        android:layout_marginRight="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/purple_700"
        android:textColorHint="@color/purple_700"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="6dp"/>

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_input"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/remember_me_chkb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:text="@string/remember_me"
            android:textColor="@color/purple_700"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/forget_password_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:text="@string/forgot_password"
            android:textColor="@color/purple_700"
            android:textSize="16sp"
            android:textStyle="bold"/>
        </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:layout_below="@+id/linear_layout_1"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="20dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/login"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_btn"
        android:layout_marginStart="275dp"
        android:layout_marginTop="3dp"
        android:text="@string/i_m_an_admin"
        android:textColor="@color/purple_700"
        android:textSize="17sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/not_admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_btn"
        android:layout_alignParentStart="true"
        android:layout_marginTop="3dp"
        android:layout_marginStart="20dp"
        android:text="@string/i_am_not_an_admin"
        android:textColor="@color/purple_700"
        android:textSize="17sp"
        android:textStyle="bold"
        android:visibility="invisible"/>
</RelativeLayout>
