<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">

<RelativeLayout
    android:id="@+id/rll"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/purple_500"
    android:layout_alignParentTop="true">

    <TextView
        android:id="@+id/total_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/total_price"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>

    <TextView
        android:id="@+id/msg1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_500"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:text="@string/congratulations_your_order_has_been_placed_successfully"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_list_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/next_process_btn"
        android:layout_below="@+id/rll">

    </androidx.recyclerview.widget.RecyclerView>


    <Button
        android:id="@+id/next_process_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/purple_500"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="20sp"/>



</RelativeLayout>

